ros2_ws/4-16/log - 複製/build_2025-04-09_14-42-42/control/stderr.log
  File "/mnt/c/ros2_ws/3-26-SRC/install/control/lib/python3.10/site-packages/control/ex1.py", line 49
    ???
    ^
SyntaxError: invalid syntax

